Fix overflow on data sources
references #75 references #85

--- a/idb/src/About.css
+++ b/idb/src/About.css
@@ -79,7 +79,7 @@
     padding-right: 25px;
     margin-bottom: 25px;
     box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2);
-    min-height: 250px;
+    min-height: 350px;
 }
 
 .tools-div .data-card p {
@@ -87,3 +87,6 @@
     margin-top: 25px;
 }
 
+.tools-div .data-card h3 {
+    overflow-wrap: break-word;
+}
